[package]
name = "meshtext"
version = "0.2.1"
edition = "2021"
description = "Generate vertex-vertex meshes from text."
readme = "README.md"
repository = "https://github.com/rkanati/meshtext"
license = "MIT OR Apache-2.0"
keywords = ["graphics", "gamedev", "delauny", "render", "triangulation"]
categories = ["graphics", "game-development", "rendering"]

[dependencies]
ttf-parser = "0.18"
lyon_tessellation = "1"

