[package]
name = "trianglyph"
version = "0.1.0"
edition = "2021"
description = "Generate triangle meshes from font glyphs."
readme = "README.md"
repository = "https://github.com/rkanati/trianglyph"
license = "MIT OR Apache-2.0"
keywords = ["graphics", "gamedev", "triangulation", "mesh", "font"]
categories = ["graphics", "game-development", "rendering"]

[dependencies]
ttf-parser = "0.18"
lyon_tessellation = "1"

